from dataclasses import dataclass

@dataclass
class Ciudad:
    id: int
    nombre: str
    visible: bool