from dataclasses import dataclass

@dataclass
class TipoDenuncia:
    id: int
    nombre: str
    visible: bool